Translation of files and more server features keys

--- a/en/discord.yml
+++ b/en/discord.yml
@@ -1,58 +1,61 @@
 ---
 permissions:
-  createInstantInvite: "Criar um convite instantâneo"
-  kickMembers: "Expulsar memberos"
-  banMembers: "Banir membros"
-  administrator: "Administrador"
-  manageChannels: "Gerenciar canais"
-  manageGuild: "Gerenciar servidor"
-  addReactions: "Adicionar reações"
-  viewAuditLog: "Ver registro de auditoria"
-  viewChannel: "Ver canais"
-  sendMessages: "Enviar mensagens"
-  sendTTSMessages: "Enviar mensagens em TTS"
-  manageMessages: "Gerenciar mensagens"
-  embedLinks: "Inserir links"
-  attachFiles: "Anexar arquivos"
-  readMessageHistory: "Ler histórico de mensagem"
-  mentionEveryone: "Mencionar todos"
-  useExternalEmojis: "Usar emojis externos"
-  viewGuildInsights: "Ver desempenho do servidor"
-  connect: "Conectar"
-  speak: "Falar"
-  muteMembers: "Silenciar membros"
-  deafenMembers: "Ensurdecer membros"
-  moveMembers: "Mover membros"
-  useVAD: "Usar detecção de voz"
-  prioritySpeaker: "Voz prioritária"
-  changeNickname: "Mudar apelido"
-  manageNicknames: "Gerenciar apelidos"
-  manageRoles: "Gerenciar cargos"
-  manageWebhooks: "Gerenciar webhooks"
-  manageEmojis: "Gerenciar Emojis"
-  useSlashCommands: "Usar comandos /"
-  requestToSpeak: "Pedir para falar"
-  manageThreads: "Gerenciar threads"
-  createPublicThreads: "Criar threads públicas"
-  createPrivateThreads: "Criar threads privadas"
-  sendMessagesInThreads: "Enviar mensagens em threads"
+  createInstantInvite: "Create an instant invite"
+  kickMembers: "Kick members"
+  banMembers: "Ban members"
+  administrator: "Administrator"
+  manageChannels: "Manage channels"
+  manageGuild: "Manage guild"
+  addReactions: "Add reactions"
+  viewAuditLog: "View audit log"
+  viewChannel: "View channels"
+  sendMessages: "Send messages"
+  sendTTSMessages: "Send TTS messages"
+  manageMessages: "Manage messages"
+  embedLinks: "Embed links"
+  attachFiles: "Attach arquivos"
+  readMessageHistory: "Read message history"
+  mentionEveryone: "Mention everyone"
+  useExternalEmojis: "Use external emojis"
+  viewGuildInsights: "View guild insights"
+  connect: "Connect"
+  speak: "Speak"
+  muteMembers: "Mute members"
+  deafenMembers: "Deafen members"
+  moveMembers: "Move membros"
+  useVAD: "Use voice detection"
+  prioritySpeaker: "Priority speaker"
+  changeNickname: "Change Nickname"
+  manageNicknames: "Manage nicknames"
+  manageRoles: "Manage roles"
+  manageWebhooks: "Manage webhooks"
+  manageEmojis: "Manage emojis"
+  useSlashCommands: "Use slashCommands"
+  requestToSpeak: "Request to speak"
+  manageThreads: "Manage threads"
+  createPublicThreads: "Create public threads"
+  createPrivateThreads: "Create private treads"
+  sendMessagesInThreads: "Send messages in threads"
 guildFeatures:
-    inviteSplash: "Fundo de convite"
-    vipRegions: "Região VIP"
-    vanityUrl: "Url customizável"
-    verified: "Verificado"
-    partnered: "Parceiro"
-    community: "Comunidade"
-    commerce: "Comério"
-    news: "Novidades"
-    discoverable: "Servidor público"
-    featurable: "Recursos futuros"
-    animatedIcon: "Ícone animado"
+    inviteSplash: "Invite splash"
+    vipRegions: "VIP regions"
+    vanityUrl: "Vanity url"
+    verified: "Verified"
+    partnered: "Partnered"
+    community: "Community"
+    commerce: "Commerce"
+    news: "News"
+    discoverable: "Public guild"
+    featurable: "Future features"
+    animatedIcon: "Animated icon"
     banner: "Banner"
-    welcomeScreenEnabled: "Tela de boas-vindas"
-    ticketedEventsEnabled: "Eventos com tickets"
-    monetizationEnabled: "Monetizado"
-    moreStickers: "Mais espaço para stickers"
-    threeDayThreadArchive: "3 dias para arquivar threads"
-    sevenDayThreadArchive: "7 dias para arquivar threads"
-    privateThreads: "Threads privadas"
+    welcomeScreenEnabled: "Welcome screen"
+    ticketedEventsEnabled: "Ticketed events"
+    monetizationEnabled: "Monetization"
+    moreStickers: "More stickers slots"
+    threeDayThreadArchive: "Three days thread archive"
+    sevenDayThreadArchive: "Seven days thread archive"
+    privateThreads: "Private threads"
+    memberVerificationGateEnabled: "Member verification gate"
+    previewEnabled: "Preview"
+    roleIcons: "Role icons"
