--- a/pt/discord.yml
+++ b/pt/discord.yml
@@ -29,7 +29,7 @@ permissions:
   manageNicknames: "Gerenciar apelidos"
   manageRoles: "Gerenciar cargos"
   manageWebhooks: "Gerenciar webhooks"
-  manageEmojis: "Gerenciar Emojis"
+  manageEmojis: "Gerenciar emojis"
   useSlashCommands: "Usar comandos /"
   requestToSpeak: "Pedir para falar"
   manageThreads: "Gerenciar threads"
@@ -56,3 +56,6 @@ guildFeatures:
     threeDayThreadArchive: "3 dias para arquivar threads"
     sevenDayThreadArchive: "7 dias para arquivar threads"
     privateThreads: "Threads privadas"
+    memberVerificationGateEnabled: "Tela de verificação"
+    previewEnabled: "Prévia do servidor"
+    roleIcons: "Ícones de cargo"
