--- a/pt/commands/invite.yml
+++ b/pt/commands/invite.yml
@@ -7,5 +7,7 @@ info:
   whoInvited: "Quem convidou"
   guildFeatures: "Recursos do servidor"
   noFeatures: "Nenhum recurso"
+  inThisServer: "Sim, eu estou no servidor!"
+  notOnTheServer: "Infelizmente eu não estou no servidor..."
   options:
     invite: "Um convite de algum servidor que você deseja ver informações"
