--- a/pt/commands/invite.yml
+++ b/pt/commands/invite.yml
@@ -3,6 +3,8 @@ info:
   description: "Mostra informações sobre um convite do servidor"
   doesntExists: "Infelizmente não consegui encontrar nenhum convite parecido com `{inviteArgument}`"
   serverMembers: "Membros"
+  onlineMembersPresence: "Online: {onlineMembers}"
+  offlineMembersPresence: "Offline: {offlineMembers}"
   invitationChannel: "Canal de convite"
   whoInvited: "Quem convidou"
   guildFeatures: "Recursos do servidor"
