--- a/default/items.yml
+++ b/default/items.yml
@@ -824,3 +824,6 @@ backgrounds:
   halloweenIsHere:
     title: "O Halloween Chegou"
     description: "Chegou o Halloween! Prepare suas fantasias e abóboras e vamos pedir doces."
+  nostalgicMemories:
+    title: "Memórias Nostálgicas"
+    description: "Rabiscos na parte de trás da contracapa da sua apostila para passar o tempo durante a aula"
