--- a/default/items.yml
+++ b/default/items.yml
@@ -887,7 +887,7 @@ backgrounds:
   viniccius13CasaAutomatica:
     title: "A Casa Automática"
     description: "São mais de 300 episódios em busca dela, apesar de nunca ter saído dali."
-  lorittaCode:
+  lorittaCodeDark:
     title: "Código da Loritta"
     description: "Tudo que há dentro de mim são códigos e circuitos!"
   loriSketchSprites:
