--- a/en-us/commands.yml
+++ b/en-us/commands.yml
@@ -42,17 +42,9 @@ commands:
   outdatedCommand:
     title: "Why not try out the new Slash Commands?"
     description:
-      - "**This command is available via Slash Commands** (`/` commands)! To use, type **`/{0}`**! {4}"
+      - "**This command is available via Slash Commands** (`/` commands)! To use, type **`/{0}`**! {2}"
       - ""
-      - "Slash Commands is the recommended way to develop commands for Discord. As of **August 31, 2022** Discord is **encouraging bots to migrate to Slash Commands**, and they are **removing the permission for bots to read content from messages sent in the chat**. {5}"
-      - ""
-      - "The commands via message are still working, because I have permission to read the message's contents. But in the future **message commands will be removed**! Don't worry, they **will only be removed after all my commands have been migrated to Slash Commands**. {6}"
-      - ""
-      - "**To find out what commands are being migrated**, join [Loritta's community server]({1})! {7}"
-      - ""
-      - "**If my slash commands are not showing up on your server**, make sure your role has \"Use app commands\" permission, make sure \"Use slash commands\" is enabled in your settings, and make sure your Discord is up to date! If you need help, join [my support server]({2})! {8}"
-      - ""
-      - "**If you want to know more about message content access and why they are making this change**, I recommend reading [Discord's Announcement About It]({3})! {9}"
+      - "In the future, Message Commands will be removed. **To find out what commands are being migrated**, join [Loritta's community server]({1})! {3}"
     discordUrl: "https://support-dev.discord.com/hc/en-us/articles/4404772028055-Message-Content-Access-Deprecation-for-Verified-Bots" #Discord Article talking about message content access deprecation
     slashCommandsTutorial: "https://cdn.discordapp.com/attachments/358774895850815488/894279612891279390/slash_tutorial_en.gif"
   arguments:
